--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Juskon BloGi</title>
+		<title>Niken Blogi</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -41,10 +41,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>	BLOGI	</h1>
+					<h1>	ploki	</h1>
 					<h2>	By	</h2>
 					<p>
-						Jusko Wihonen
+						Niklas Valkonen
 					</p>
 				</section>
 
