--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Juskon BloGi</title>
+		<title>Niken ploki</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -41,15 +41,15 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>	BLOGI	</h1>
+					<h1>	ploki	</h1>
 					<h2>	By	</h2>
 					<p>
-						Jusko Wihonen
+						Niklas Valkonen
 					</p>
 				</section>
 
 				<section>
-					<h3>	Toinen dia	</h3>
+					<h3>	2. dia	</h3>
 					<section>
 					<p>
 					 :)	
